--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "export": "next export"
   },
   "dependencies": {
+    "@types/react-resizable": "^3.0.8",
     "@types/three": "^0.179.0",
     "framer-motion": "^12.23.12",
     "lume": "^0.3.0-alpha.46",
     "next": "15.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-draggable": "^4.5.0",
+    "react-resizable": "^3.0.5",
     "react-tsparticles": "^2.12.2",
     "three": "^0.179.1",
     "tsparticles": "^3.9.1"
