added the ability to add journals

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-resizable": "^3.0.8",
     "@types/three": "^0.179.0",
     "framer-motion": "^12.23.12",
+    "gray-matter": "^4.0.3",
     "lume": "^0.3.0-alpha.46",
     "next": "15.4.3",
     "react": "19.1.0",
@@ -20,8 +21,17 @@
     "react-draggable": "^4.5.0",
     "react-resizable": "^3.0.5",
     "react-tsparticles": "^2.12.2",
+    "reading-time": "^1.5.0",
+    "rehype": "^13.0.2",
+    "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
     "three": "^0.179.1",
-    "tsparticles": "^3.9.1"
+    "tsparticles": "^3.9.1",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
