updated website to have better features

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/three": "^0.179.0",
     "framer-motion": "^12.23.12",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.563.0",
     "lume": "^0.3.0-alpha.46",
     "next": "15.4.3",
+    "re-resizable": "^6.11.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-draggable": "^4.5.0",
