--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lucide-react": "^0.563.0",
     "lume": "^0.3.0-alpha.46",
     "next": "15.4.3",
+    "posthog-js": "^1.351.4",
+    "posthog-node": "^5.21.2",
     "re-resizable": "^6.11.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
